<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_logout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ethantien.m4.controller.startApplication">

    <Button
        android:text="@string/Logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        android:id="@+id/logout" />

    <Button
        android:text="@string/Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/logout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:id="@+id/Profile" />

    <Button
        android:text="@string/ViewWR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:id="@+id/viewReports" />

    <Button
        android:text="@string/ViewPR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewReports"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:id="@+id/viewPurityReports" />

    <Button
        android:text="@string/ViewMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/viewMap"
        android:layout_below="@+id/viewGraph"
        android:layout_toRightOf="@+id/Profile"
        android:layout_toEndOf="@+id/Profile" />

    <Button
        android:text="@string/ViewHG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/viewGraph"
        android:layout_below="@+id/viewPurityReports"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
