<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_graph_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ethantien.m4.controller.ViewGraphSettings">

    <TextView
        android:text="@string/ChoseGraphSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/textView18"
        android:textSize="24sp" />

    <TextView
        android:text="@string/EnterLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:id="@+id/textView15"
        android:layout_below="@+id/textView18"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:text="@string/VirusPPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView21"
        android:layout_alignRight="@+id/textView18"
        android:layout_alignEnd="@+id/textView18"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="31dp"
        android:onClick="onVirusButtonClicked"
        android:id="@+id/virusButton" />

    <RadioButton
        android:text="@string/ContaminantPPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/contaminantButton"
        android:layout_below="@+id/virusButton"
        android:layout_alignLeft="@+id/virusButton"
        android:onClick="onContaminantButtonClicked"
        android:layout_alignStart="@+id/virusButton" />

    <TextView
        android:text="@string/Select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/contaminantButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView23" />

    <TextView
        android:text="@string/EnterYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/textView25"
        android:layout_below="@+id/contaminantButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/EnterLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_above="@+id/textView21"
        android:layout_alignLeft="@+id/virusButton"
        android:layout_alignStart="@+id/virusButton"
        android:id="@+id/enterLat"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/enterLong"
        android:layout_above="@+id/virusButton"
        android:layout_alignLeft="@+id/enterLat"
        android:layout_alignStart="@+id/enterLat"
        android:inputType="numberSigned|numberDecimal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/contaminantButton"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21"
        android:layout_marginTop="24dp"
        android:id="@+id/enterYear"
        android:inputType="number" />

    <Button
        android:text="@string/GenerateGraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:id="@+id/generateGraph"
        android:layout_below="@+id/enterYear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp" />

    <Button
        android:text="@string/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/generateGraph"
        android:layout_alignRight="@+id/enterYear"
        android:layout_alignEnd="@+id/enterYear"
        android:id="@+id/cancel" />
</RelativeLayout>
