<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ethantien.m4.controller.addReport">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:id="@+id/latitude"
        android:layout_alignBottom="@+id/textView9" />

    <TextView
        android:text="@string/EnterWaterRepInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/textView6"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:text="@string/Lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:id="@+id/textView9" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:ems="10"
        android:id="@+id/longitude"
        android:layout_alignLeft="@+id/latitude"
        android:layout_alignStart="@+id/latitude"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignRight="@+id/latitude"
        android:layout_alignEnd="@+id/latitude" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/typeSpinner"
        android:layout_alignTop="@+id/textView11"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView12"
        android:layout_alignLeft="@+id/longitude"
        android:layout_alignStart="@+id/longitude"
        android:id="@+id/conditionSpinner" />

    <Button
        android:text="@string/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/submitButton"
        android:layout_alignRight="@+id/longitude"
        android:layout_alignEnd="@+id/longitude"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp"
        android:id="@+id/cancel" />

    <Button
        android:text="@string/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/typeSpinner"
        android:layout_alignStart="@+id/typeSpinner"
        android:layout_marginBottom="81dp" />

    <TextView
        android:text="@string/Type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Longi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:layout_below="@+id/typeSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <Button
        android:text="@string/getLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:id="@+id/location_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="getLocation"/>
</RelativeLayout>
