<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_report_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ethantien.m4.controller.viewReportDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView13"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:text="@string/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="43dp"
        android:id="@+id/textView14" />


    <TextView
        android:text="@string/Condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textView22"
        android:layout_below="@+id/textView20"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/DateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/textView16"
        android:layout_below="@+id/textView14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/SubmittedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/textView24"
        android:layout_below="@+id/textView22"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/textView20"
        android:layout_below="@+id/textView16"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView16"
        android:layout_alignLeft="@+id/location"
        android:layout_alignStart="@+id/location"
        android:id="@+id/dateAndTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView20"
        android:layout_alignLeft="@+id/dateAndTime"
        android:layout_alignStart="@+id/dateAndTime"
        android:id="@+id/type" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView24"
        android:layout_alignLeft="@+id/type"
        android:layout_alignStart="@+id/type"
        android:id="@+id/condition" />

    <Button
        android:text="@string/ViewOnMap"
        android:layout_toEndOf="@+id/backList"
        android:layout_toRightOf="@+id/backList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backMap"
        android:layout_marginRight="34dp"
        android:layout_marginEnd="34dp"
        android:layout_alignBaseline="@+id/backList"
        android:layout_alignBottom="@+id/backList"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/BackToList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:id="@+id/backList"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView14"
        android:layout_toEndOf="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/location"
        android:layout_above="@+id/textView16"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_alignBaseline="@+id/textView24"
        android:layout_alignBottom="@+id/textView24"
        android:layout_alignLeft="@+id/condition"
        android:layout_alignStart="@+id/condition" />

</RelativeLayout>
